0.9.6:
    - remove box sizes, replace LoGpicker by cryolo
0.9.5:
    - add mrc and bigtiff parsers. Xml metadata is preferred over mrc.
    - parsing functions moved to utils/
0.9.4:
    - fix pixel size for super-res
0.9.3:
    - first version for PyPi
0.9.2:
    - Scipion 3 scheduling works, however relion 3.1 is not ready for streaming
    - added more parameters to xml parser: VPP options, gun lens, spot size, beam size
    - fix "do until ctf"

0.9.1:
    - refactored xml parser, now it should not depend on EPU version
    - launching Relion schedules in a separate subprocess, return shell immediately
    - code clean up
    - fix wrong ptcl diameter for preprocess schedule
    - remove shell=True to increase security
    - initial preparation for scipion 3 workflow
    - created SCOPE_DICT, now parser is not LMB-specific